--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "apollo-server-express": "^3.13.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "csv-parse": "^6.1.0",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "graphql": "^16.11.0",
@@ -34,7 +35,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
     "openai": "^4.103.0",
-    "redis": "^5.1.0",
+    "redis": "^5.8.0",
     "winston": "^3.17.0",
     "zod": "^3.25.28"
   },
