--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -12,31 +12,19 @@ services:
       - ./:/app
       - /app/node_modules
     command: npm run dev
+    env_file:
+      - .env
     environment:
       - NODE_ENV=development
       - PORT=4000
-      - MONGODB_URI=mongodb://mongo:27017/portfolio
       - REDIS_URL=redis://redis:6379
       - JWT_SECRET=dev_jwt_secret_key_change_in_production
       - RATE_LIMIT_WINDOW=3600
       - RATE_LIMIT_MAX_REQUESTS=10
     depends_on:
-      - mongo
       - redis
     networks:
-      - portfolio-network
-    restart: unless-stopped
-
-  # MongoDB service
-  mongo:
-    image: mongo:latest
-    ports:
-      - "27018:27017"
-    command: --port 27017
-    volumes:
-      - mongo-data:/data/db
-    networks:
-      - portfolio-network
+      - wedstack-network
     restart: unless-stopped
 
   # Redis service
@@ -47,15 +35,14 @@ services:
     volumes:
       - redis-data:/data
     networks:
-      - portfolio-network
+      - wedstack-network
     restart: unless-stopped
 
 # Volumes for data persistence
 volumes:
-  mongo-data:
   redis-data:
 
 # Network for service communication
 networks:
-  portfolio-network:
+  wedstack-network:
     driver: bridge
