--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,7 +3,7 @@ PORT=4000
 NODE_ENV=development
 
 # Database
-MONGODB_URI=mongodb://localhost:27017/portfolio
+MONGODB_URI=mongodb://localhost:27017/wedstack
 
 # Redis
 REDIS_URL=redis://localhost:6379
