feat(deploy): sets up AWS EB for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,8 @@ dist
 
 # Server
 server
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
