--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,15 +8,17 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 RUN mkdir -p public
-# Set the environment variable for the build process
-ENV NEXT_PUBLIC_GRAPHQL_URL=https://luisfaria.dev/graphql
+# Use ARG to accept build-time environment variable
+ARG NEXT_PUBLIC_GRAPHQL_URL
+ENV NEXT_PUBLIC_GRAPHQL_URL=${NEXT_PUBLIC_GRAPHQL_URL}
 RUN npm run build
 
 FROM node:20-alpine AS runner
 WORKDIR /app
 ENV NODE_ENV production
-# Set the environment variable for runtime as well
-ENV NEXT_PUBLIC_GRAPHQL_URL=https://luisfaria.dev/graphql
+# Use ARG to accept build-time environment variable for runtime
+ARG NEXT_PUBLIC_GRAPHQL_URL
+ENV NEXT_PUBLIC_GRAPHQL_URL=${NEXT_PUBLIC_GRAPHQL_URL}
 
 RUN addgroup --system --gid 1001 nodejs && adduser --system --uid 1001 nextjs
 
