chore(secrets): read MONGODB_URI from env; ignore env files

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,9 @@ server
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+# envs
+.env
+.env.*
+frontend/.env*
+backend/.env*
