--- a/docker-compose.aws.yml
+++ b/docker-compose.aws.yml
@@ -7,8 +7,8 @@ services:
       - "443:443"
     volumes:
       - ./nginx/conf/aws.conf:/etc/nginx/conf.d/default.conf
-      - /etc/letsencrypt:/etc/letsencrypt:ro
-      - web-root:/var/www/certbot
+      # - /etc/letsencrypt:/etc/letsencrypt:ro
+      # - web-root:/var/www/certbot
     depends_on:
       - webapp
       - api
@@ -22,9 +22,10 @@ services:
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt:rw
       - web-root:/var/www/certbot
-    command: certonly --webroot --webroot-path=/var/www/certbot --email lfariaus@gmail.com --agree-tos --no-eff-email -d weddingln.com -d www.weddingln.com
-    depends_on:
-      - gateway
+    command: >
+      certonly --webroot --webroot-path=/var/www/certbot
+      --email lfariaus@gmail.com --agree-tos --no-eff-email
+      -d weddingln.com -d www.weddingln.com
 
   webapp:
     build: 
