--- a/nginx/conf/aws.conf
+++ b/nginx/conf/aws.conf
@@ -1,88 +1,44 @@
-# HTTP to HTTPS redirect
+# Redireciona HTTP para HTTPS
 server {
-    listen 80;
-    server_name weddingln.com www.weddingln.com;
-    
-    # Let's Encrypt challenge
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-    
-    # Redirect all HTTP to HTTPS
-    location / {
-        return 301 https://$server_name$request_uri;
-    }
+  listen 80;
+  server_name weddingln.com www.weddingln.com;
+
+  return 301 https://$host$request_uri;
 }
 
-# HTTPS server
+# HTTPS com certificados Let's Encrypt
 server {
-    listen 443 ssl http2;
-    server_name weddingln.com www.weddingln.com;
+  listen 443 ssl;
+  server_name weddingln.com www.weddingln.com;
 
-    # SSL configuration
-    ssl_certificate /etc/letsencrypt/live/weddingln.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/weddingln.com/privkey.pem;
-    
-    # SSL security settings
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
-    ssl_prefer_server_ciphers off;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-    
-    # Security headers
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    add_header X-Frame-Options DENY always;
-    add_header X-Content-Type-Options nosniff always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+  ssl_certificate /etc/letsencrypt/live/weddingln.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/weddingln.com/privkey.pem;
 
-    # Health check
-    location /health {
-        return 200 "healthy\n";
-        add_header Content-Type text/plain;
-    }
+  ssl_protocols TLSv1.2 TLSv1.3;
+  ssl_ciphers HIGH:!aNULL:!MD5;
 
-    # GraphQL API
-    location /graphql {
-        proxy_pass http://api:4000/graphql;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        
-        # CORS headers for production
-        add_header Access-Control-Allow-Origin "https://weddingln.com";
-        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
-        add_header Access-Control-Allow-Headers "Content-Type, Authorization";
-        
-        # Handle preflight requests
-        if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin "https://weddingln.com";
-            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization";
-            return 204;
-        }
-    }
+  location = /health {
+    return 200 "healthy\n";
+    add_header Content-Type text/plain;
+  }
 
-    # Frontend (Next.js)
-    location / {
-        proxy_pass http://webapp:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_cache_bypass $http_upgrade;
-        
-        # Static assets caching
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            proxy_pass http://webapp:3000;
-        }
-    }
+  location /graphql {
+    proxy_pass http://api:4000/graphql;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  location / {
+    proxy_pass http://webapp:3000;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+  }
 }
