feat(deploy): kills AWS and goes with DG droplet

--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -1,46 +1,36 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name weddingln.com www.weddingln.com;
 
-    # Health check
-    location /health {
-        return 200 "healthy\n";
-        add_header Content-Type text/plain;
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
     }
 
-    # GraphQL API
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name weddingln.com www.weddingln.com;
+
+    ssl_certificate /etc/letsencrypt/live/weddingln.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/weddingln.com/privkey.pem;
+
     location /graphql {
         proxy_pass http://api:4000/graphql;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        
-        # CORS headers for local development
-        add_header Access-Control-Allow-Origin *;
-        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
-        add_header Access-Control-Allow-Headers "Content-Type, Authorization";
-        
-        # Handle preflight requests
-        if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin *;
-            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
-            add_header Access-Control-Allow-Headers "Content-Type, Authorization";
-            return 204;
-        }
     }
 
-    # Frontend (Next.js)
     location / {
         proxy_pass http://webapp:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_cache_bypass $http_upgrade;
     }
 }
