--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,14 @@
 services:
-  reverse-proxy:
+  gateway:
     image: nginx:alpine
     container_name: nginx_gateway
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      - ./nginx/conf:/etc/nginx/conf.d
+      - ./nginx/conf/default.conf:/etc/nginx/conf.d/default.conf
+      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
     depends_on:
       - webapp
       - api
@@ -13,14 +16,25 @@ services:
       - app-net
     restart: always
 
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
+    command: >
+      certonly --webroot --webroot-path=/var/www/certbot
+      --email lfariaus@gmail.com --agree-tos --no-eff-email
+      -d weddingln.com -d www.weddingln.com
+
   webapp:
-    build: 
+    build:
       context: ./frontend
       args:
-        NEXT_PUBLIC_GRAPHQL_URL: http://localhost/graphql
+        NEXT_PUBLIC_GRAPHQL_URL: https://weddingln.com/graphql
     container_name: frontend_app
     environment:
-      - NEXT_PUBLIC_GRAPHQL_URL=http://localhost/graphql
+      - NEXT_PUBLIC_GRAPHQL_URL=https://weddingln.com/graphql
     expose:
       - "3000"
     networks:
@@ -32,12 +46,12 @@ services:
     container_name: backend_api
     environment:
       - NODE_ENV=production
-      - PORT=4000
       - MONGODB_URI=mongodb://db:27017/wedstack
       - REDIS_URL=redis://cache:6379/0
       - JWT_SECRET=local-development-secret-key
       - RATE_LIMIT_WINDOW=60000
       - RATE_LIMIT_MAX_REQUESTS=100
+      - PORT=4000
     expose:
       - "4000"
     depends_on:
