feat(docs): updates README, env.example and gitignore

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,34 @@
+# Server
+PORT=
+NODE_ENV=
+
+# Database
 MONGODB_URI=
+
+# Redis
+REDIS_URL=
+REDIS_PASSWORD=
+
+# Rate Limiting
+RATE_LIMIT_WINDOW=
+RATE_LIMIT_MAX_REQUESTS=
+
+# Authentication
+JWT_SECRET=
+
+# Production Database Credentials (for docker-compose.prod.yml)
+MONGO_USER=
+MONGO_PASSWORD=
+
+# DockerHub Credentials
+DOCKERHUB_USERNAME=
+DOCKERHUB_TOKEN=
+
+# Frontend
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
+NEXT_PUBLIC_STRIPE_PRICE_1=
+NEXT_PUBLIC_STRIPE_PRICE_2=
+NEXT_PUBLIC_STRIPE_PRICE_3=
+NEXT_PUBLIC_STRIPE_PRICE_4=
+NEXT_PUBLIC_SITE_URL=
