--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,25 +1,34 @@
 # Server
-PORT=4000
-NODE_ENV=development
+PORT=
+NODE_ENV=
 
 # Database
-MONGODB_URI=mongodb://localhost:27017/wedstack
+MONGODB_URI=
 
 # Redis
-REDIS_URL=redis://localhost:6379
+REDIS_URL=
+REDIS_PASSWORD=
 
 # Rate Limiting
-RATE_LIMIT_WINDOW=3600
-RATE_LIMIT_MAX_REQUESTS=10
+RATE_LIMIT_WINDOW=
+RATE_LIMIT_MAX_REQUESTS=
 
 # Authentication
-JWT_SECRET=your_jwt_secret_key_change_in_production
+JWT_SECRET=
 
 # Production Database Credentials (for docker-compose.prod.yml)
-MONGO_USER=admin
-MONGO_PASSWORD=secure_password_here
-REDIS_PASSWORD=secure_redis_password_here
+MONGO_USER=
+MONGO_PASSWORD=
 
 # DockerHub Credentials
-DOCKERHUB_USERNAME=your_dockerhub_username
-DOCKERHUB_TOKEN=your_dockerhub_token
+DOCKERHUB_USERNAME=
+DOCKERHUB_TOKEN=
+
+# Frontend
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
+NEXT_PUBLIC_STRIPE_PRICE_1=
+NEXT_PUBLIC_STRIPE_PRICE_2=
+NEXT_PUBLIC_STRIPE_PRICE_3=
+NEXT_PUBLIC_STRIPE_PRICE_4=
+NEXT_PUBLIC_SITE_URL=
