--- a/backend/package.json
+++ b/backend/package.json
@@ -22,8 +22,11 @@
   "description": "",
   "dependencies": {
     "@apollo/server": "^4.12.1",
+    "@aws-sdk/client-s3": "^3.637.0",
+    "@aws-sdk/s3-request-presigner": "^3.637.0",
     "@graphql-tools/schema": "^10.0.23",
     "apollo-server-express": "^3.13.0",
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "csv-parse": "^6.1.0",
