feat(memory-lane): frontend setup, components and main flow (Relates #10)

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,18 @@ MONGO_PASSWORD=
 DOCKERHUB_USERNAME=
 DOCKERHUB_TOKEN=
 
+# DigitalOcean Spaces (S3-compatible)
+SPACES_ENDPOINT=
+SPACES_REGION=
+SPACES_BUCKET=
+SPACES_KEY=
+SPACES_SECRET=
+SPACES_CDN_BASE_URL=
+
+# Upload Gate (simple passcodes for camera/upload page and backend signing)
+UPLOAD_PASSCODES=
+NEXT_PUBLIC_UPLOAD_PASSCODE=
+
 # Frontend
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
