--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
     "openai": "^4.103.0",
+    "qrcode": "^1.5.3",
     "redis": "^5.8.0",
     "winston": "^3.17.0",
     "zod": "^3.25.28"
@@ -50,6 +51,7 @@
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.21",
+    "@types/qrcode": "^1.5.5",
     "@types/redis": "^4.0.10",
     "jest": "^29.7.0",
     "mongodb": "^6.16.0",
